tests/files/parser_tests/should_fail/065.cmdr
//Should not parse if-chain
else {
    echo "hello";
}